--- a/src/app/map-page/map/map.component.html
+++ b/src/app/map-page/map/map.component.html
@@ -1,2 +1,5 @@
 <google-map [options]="options" width="100%"></google-map>
 <p *ngIf="isWaiting">Waiting for geolocation ...</p>
+
+{{ 'placeholder.test' | translate }}
+<!-- TODO: just an example, to be removed -->
