--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
-<img src="assets/dim-logo.svg" class="img-fluid navbar__logo" alt="app logo">
+<img src="assets/Logo.svg" class="img-fluid navbar__logo" alt="app logo">
 
 <div class="navbar__langauge">
-    <img src="assets/flags/flag-usa.svg" alt="language flag" class="navbar__flag">
-    <span class="navbar__dropdown">V</span>
+    <img src="assets/usa.svg" alt="language flag" class="navbar__flag">
+    <span cla ss="navbar__dropdown">V</span>
 </div>
 
