--- a/src/app/map-page/components/map/map.component.html
+++ b/src/app/map-page/components/map/map.component.html
@@ -1,5 +1,1 @@
-<google-map [options]="options" width="100%"></google-map>
-<p *ngIf="isWaiting">Waiting for geolocation ...</p>
-
-{{ 'placeholder.test' | translate }}
-<!-- TODO: just an example, to be removed -->
+<google-map [options]="options" height="75vh" width="100%"></google-map>
