Implement news widget

--- a/src/app/map-page/components/status-panel/status-panel.component.html
+++ b/src/app/map-page/components/status-panel/status-panel.component.html
@@ -1,1 +1,7 @@
-<p>sidepanel works!</p>
+<section class="mb-3">
+    <h2 class="section-title">
+        {{ 'statusPanel.statusSection.title' | translate }}
+    </h2>
+    <app-news-widget></app-news-widget>
+</section>
+<app-footer></app-footer>
