--- a/src/app/shared/components/news-widget/news-widget.component.html
+++ b/src/app/shared/components/news-widget/news-widget.component.html
@@ -1,1 +1,11 @@
-<p>news-widget works!</p>
+<img src="assets/news.png" class="widget__image img-fluid rounded me-3">
+<div class="widget__content">
+    <div class="widget__text">
+        {{ 'statusPanel.statusSection.newsWidget.text' | translate }}
+    </div>
+    <a routerLink="/" class="widget__link">
+        {{ 'statusPanel.statusSection.newsWidget.viewBtnText' | translate }}
+        ({{newsCount}})
+        <i class="fa fa-chevron-right fa-xs ms-2"></i>
+    </a>
+</div>
