--- a/src/app/core/components/navbar/navbar.component.scss
+++ b/src/app/core/components/navbar/navbar.component.scss
@@ -1,4 +1,11 @@
+@import '~bootstrap/scss/functions';
+@import '~bootstrap/scss/variables';
+
 :host{
+    position: sticky;
+    z-index: $zindex-sticky;
+    top: 0;
+
     display: block;
     height: 62px;
     box-shadow: 0px 1px 0px rgba(197, 208, 227, 0.4);
