Implement SendRequestSection component

--- a/src/app/map-page/components/status-panel/status-panel.component.html
+++ b/src/app/map-page/components/status-panel/status-panel.component.html
@@ -4,4 +4,7 @@
     </h2>
     <app-news-widget></app-news-widget>
 </section>
+<section class="mb-3">
+    <app-send-request-section></app-send-request-section>
+</section>
 <app-footer></app-footer>
