--- a/src/app/map-page/components/send-request-section/send-request-section.component.html
+++ b/src/app/map-page/components/send-request-section/send-request-section.component.html
@@ -1,1 +1,11 @@
-<p>send-request-section works!</p>
+<div class="form__text text-muted">
+    {{ 'statusPanel.sendReuqestSection.text' | translate }}
+</div>
+<div class="my-3">
+    <textarea class="form-control" rows="5"
+        placeholder="{{ 'statusPanel.sendReuqestSection.inputPlaceholder' | translate }}"></textarea>
+</div>
+
+<button type="button" class="form__submit btn btn-light w-100">
+    {{ 'statusPanel.sendReuqestSection.submitBtnText' | translate }}
+</button>
