--- a/src/app/map-page/components/status-panel/status-panel.component.html
+++ b/src/app/map-page/components/status-panel/status-panel.component.html
@@ -2,6 +2,7 @@
     <h2 class="section-title">
         {{ 'statusPanel.statusSection.title' | translate }}
     </h2>
+    <app-overview-tab></app-overview-tab>
     <app-news-widget></app-news-widget>
 </section>
 <section class="mb-3">
