--- a/src/app/map-page/components/status-panel/status-panel.component.html
+++ b/src/app/map-page/components/status-panel/status-panel.component.html
@@ -1,4 +1,4 @@
-<app-photos-widget></app-photos-widget>
+<app-photos-widget [photos]="marker?.photos"></app-photos-widget>
 <section class="mb-3">
     <h2 class="section-title">
         {{ 'statusPanel.statusSection.title' | translate }}
