--- a/src/app/map-page/components/status-panel/status-panel.component.html
+++ b/src/app/map-page/components/status-panel/status-panel.component.html
@@ -3,5 +3,6 @@
         {{ 'statusPanel.statusSection.title' | translate }}
     </h2>
     <app-news-widget></app-news-widget>
+    <app-status-list></app-status-list>
 </section>
 <app-footer></app-footer>
