--- a/src/app/core/components/status-item/status-item.component.scss
+++ b/src/app/core/components/status-item/status-item.component.scss
@@ -1,12 +1,10 @@
 :host {
-  position: absolute;
-  bottom: 200px;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 16px 0px;
   gap: 8px;
-  padding: 8px 16px;
+  padding: 8px 0;
   width: 100%;
   min-height: 55px;
   font-family: "Inter";
