--- a/src/app/map-page/components/photos-widget/photos-widget.component.html
+++ b/src/app/map-page/components/photos-widget/photos-widget.component.html
@@ -3,7 +3,7 @@
     Photos ({{photos?.length}})
 </h2>
 <div class="photos-container">
-    <div class="photo" *ngFor="let photo of photos">
+    <div class="photo" *ngFor="let photo of photos" (click)="showPhotoModal(photo)">
         <img [src]="photo.url">
     </div>
 </div>
