--- a/src/app/core/components/status-item/status-item.component.scss
+++ b/src/app/core/components/status-item/status-item.component.scss
@@ -13,6 +13,26 @@
   box-shadow: 0px 1px 0px rgba(197, 208, 227, 0.4);
 }
 .status-item {
+  &__wrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+  }
+  &__distance {
+    display: block;
+    width: 53px;
+    height: 23px;
+    margin-left:4px ;
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 22px;
+    text-transform: uppercase;
+    color: #91a2bd;
+  }
   &__icon {
     margin-right: 8px;
   }
@@ -28,7 +48,6 @@
       display: flex;
       flex-direction: row;
       justify-content: space-between;
-      width: 100%;
       font-weight: 600;
       font-size: 14px;
       line-height: 22px;
@@ -36,6 +55,7 @@
   }
   &__description {
     background: #f0f4fa;
+    color: #495466;
     width: 100%;
     min-height: 39px;
     padding: 8px;
