--- a/src/app/map-page/components/overview-tab/overview-tab.component.html
+++ b/src/app/map-page/components/overview-tab/overview-tab.component.html
@@ -1,11 +1,11 @@
-<ul ngbNav #nav="ngbNav" [(activeId)]="active" class="nav-tabs nav-tabs-container">
-    <li ngbNavItem [ngbNavItem]="0">
-        <a ngbNavLink>{{ 'tabs.overview' | translate }}</a>
-        <ng-template ngbNavContent>Overview content</ng-template>
-    </li>
-    <li ngbNavItem [ngbNavItem]="1">
-        <a ngbNavLink>{{ 'tabs.changeHistory' | translate }}</a>
-        <ng-template ngbNavContent>Change History content</ng-template>
-    </li>
-</ul>
-<div [ngbNavOutlet]="nav" class="my-2 nav-tabs-content"></div>
+<app-photos-widget [photos]="marker?.photos"></app-photos-widget>
+<section class="mb-3">
+    <h2 class="section-title">
+        {{ 'statusPanel.statusSection.title' | translate }}
+    </h2>
+    <app-news-widget></app-news-widget>
+    <app-status-list></app-status-list>
+</section>
+<section class="mb-3">
+    <app-send-request-section></app-send-request-section>
+</section>
