--- a/src/app/map-page/components/overview-tab/overview-tab.component.scss
+++ b/src/app/map-page/components/overview-tab/overview-tab.component.scss
@@ -1,23 +1,7 @@
 @import "~bootstrap/scss/functions";
 @import "~bootstrap/scss/variables";
 
-.nav-tabs.nav-tabs-container .nav-item {
-    flex: 1;
-    text-align: center;
-}
-
-.nav-tabs-container .nav-link {
-    color: $body-color;
-    font-weight: 500;
-}
-
-.nav-tabs-container .nav-link.active {
-    border-color: transparent;
-    border-bottom: 2px solid $primary;
-    color: $primary;
-}
-
-.nav-tabs-content {
-    padding-left: 12px;
-    padding-right: 12px;
+:host {
+    display: block;
+    padding: map-get($spacers, 3);
 }
