--- a/src/app/core/components/status-list/status-list.component.html
+++ b/src/app/core/components/status-list/status-list.component.html
@@ -1,6 +1,3 @@
-<div *ngFor="let status of statuses"      class="app-status-item" >
-    <app-status-item
-
-    [status] = "status"
-    ></app-status-item>
+<div *ngFor="let status of statuses" class="app-status-item">
+    <app-status-item [status]="status"></app-status-item>
 </div>
