--- a/src/app/map-page/components/overview-tab/overview-tab.component.html
+++ b/src/app/map-page/components/overview-tab/overview-tab.component.html
@@ -4,7 +4,7 @@
         {{ 'statusPanel.statusSection.title' | translate }}
     </h2>
     <app-news-widget></app-news-widget>
-    <app-status-list></app-status-list>
+    <app-status-list [statuses]="marker?.statuses"></app-status-list>
 </section>
 <section class="mb-3">
     <app-send-request-section></app-send-request-section>
