--- a/src/app/map-page/components/status-panel/status-panel.component.html
+++ b/src/app/map-page/components/status-panel/status-panel.component.html
@@ -9,7 +9,7 @@
     <li [ngbNavItem]="1">
         <a ngbNavLink>{{ 'tabs.changeHistory' | translate }}</a>
         <ng-template ngbNavContent>
-            <p>Placeholder Tab Content</p>
+            <div style="height: 5rem;display: flex;align-items: center;justify-content: center">Placeholder Tab Content</div>
         </ng-template>
     </li>
 </ul>
