--- a/src/app/map-page/components/overview-tab/overview-tab.component.html
+++ b/src/app/map-page/components/overview-tab/overview-tab.component.html
@@ -1,10 +1,11 @@
-<app-photos-widget [photos]="marker?.photos"></app-photos-widget>
+<app-photos-widget [photos]="marker?.photos" *ngIf="marker?.photos"></app-photos-widget>
 <section class="mb-3">
     <h2 class="section-title">
         {{ 'statusPanel.statusSection.title' | translate }}
     </h2>
     <app-news-widget></app-news-widget>
-    <app-status-list [statuses]="marker?.statuses"></app-status-list>
+<!--    <app-status-list [statuses]="marker?.statuses"></app-status-list>-->
+    <app-status-list></app-status-list>
 </section>
 <section class="mb-3">
     <app-send-request-section></app-send-request-section>
